[tool.poetry]
name = "retrieval-enhanced-real-estate-appraisal"
version = "0.0.1"
description = "Retrieval Enhanced Real Estate Appraisal."
license = "BSD-3"
authors = ["simon <simon@homiwoo.com>"]
readme = "README.md"
keywords = ["retrieval-enhanced", "machine-learning", "real-estate"]
packages = [{ include = "retrieval_enhanced_real_estate_appraisal" }]

[tool.poetry.dependencies]
python = "^3.11.4"
black = "24.4.2"
click = "8.1.7"
geopandas = "0.14.4"
geopy = "2.4.1"
ipykernel = "6.29.0"
ipython = "8.20.0"
ipywidgets = "8.1.3"
isort = "5.13.2"
lightning = "2.3.0"
lightning-utilities = "0.10.0"
matplotlib = "3.8.2"
numpy = "1.26.3"
optuna = "3.6.1"
pandas = "2.1.4"
pytorch-lightning = "2.3.0"
scikit-learn = "1.3.2"
scipy = "1.11.4"
seaborn = "0.13.2"
tqdm = "4.66.1"
torch = { version = "2.3.1", source = "torch" }
umap-learn = "0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
